apps/netdata/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netdata
  labels:
    app.kubernetes.io/name: netdata
    app.kubernetes.io/component: monitoring
