apps/netdata/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netdata
  namespace: netdata
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  rules:
    - host: netdata.home.kennethblack.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: netdata
                port:
                  number: 19999
  tls:
    - hosts:
        - netdata.home.kennethblack.me
      secretName: netdata-tls
